--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,14 +1,5 @@
 {
-  "builds": [
-    {
-      "src": "dist/client/browser/index.html",
-      "use": "@vercel/static"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/client/browser/index.html"
-    }
-  ]
+    "rewrites": [
+        {"source": "/(.*)", "destination": "/"}
+    ]
 }
