--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,10 +1,5 @@
 {
-  "version": 2,
-  "public": "dist/client/browser",
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
