--- a/server/jagarv/src/main/resources/application.properties
+++ b/server/jagarv/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update 
 spring.jpa.show-sql=true 
 server.port=${PORT:8080}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 
