--- a/client/angular.json
+++ b/client/angular.json
@@ -33,7 +33,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "src/assets"
+                "input": "src/assets",
+                "output": "/assets/"
               },
               "src/favicon.ico"
             ],
