--- a/server/jagarv/src/main/resources/application.properties
+++ b/server/jagarv/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true 
 server.port=${PORT:8080}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+cloudinary.cloudName=${cloudinaryCloudName}
+cloudinary.apiKey=${cloudinaryApiKey}
+cloudinary.apiSecret=${cloudinaryApiSecret}
 
