--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -84,12 +84,19 @@
         </dependency>
         
         
-        <!-- Cloudinary -->
-        <dependency>
+        <!-- Cloudinary Older -->
+       <!-- <dependency>
           <groupId>com.cloudinary</groupId>
           <artifactId>cloudinary-http44</artifactId>
           <version>1.31.0</version>
-      </dependency>
+      </dependency> --> 
+      
+      <!-- Cloudinary New -->
+      <dependency>
+         <groupId>com.cloudinary</groupId>
+         <artifactId>cloudinary</artifactId>
+         <version>1.31.0</version>
+       </dependency>
 
     </dependencies>
 
