--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -85,18 +85,18 @@
         
         
         <!-- Cloudinary Older -->
-       <!-- <dependency>
+        <dependency>
           <groupId>com.cloudinary</groupId>
           <artifactId>cloudinary-http44</artifactId>
           <version>1.31.0</version>
-      </dependency> --> 
+      </dependency> 
       
-      <!-- Cloudinary New -->
+      <!-- Cloudinary New 
       <dependency>
          <groupId>com.cloudinary</groupId>
          <artifactId>cloudinary</artifactId>
          <version>1.31.0</version>
-       </dependency>
+       </dependency> --> 
 
     </dependencies>
 
