changing some configuratio,

--- a/server/jagarv/src/main/resources/application.properties
+++ b/server/jagarv/src/main/resources/application.properties
@@ -9,3 +9,6 @@ cloudinary.cloudName=${cloudinaryCloudName}
 cloudinary.apiKey=${cloudinaryApiKey}
 cloudinary.apiSecret=${cloudinaryApiSecret}
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
