--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,12 +21,12 @@
     "module": "ES2022",
     "lib": ["ES2022", "dom"],
     
-    "baseUrl": "./src",
+    "baseUrl": "./src/app",
     "paths": {
-      "@models/*": ["app/models/*"],
-      "@services/*": ["app/services/*"],
-      "@env/*": ["app/environments/*"],
-      "@validators/*": ["app/validators/*"]
+      "@models/*": ["/models/*"],
+      "@services/*": ["/services/*"],
+      "@env/*": ["/environments/*"],
+      "@validators/*": ["/validators/*"]
     }
   },
   "angularCompilerOptions": {
