--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -28,10 +28,16 @@
         </dependency>
 
         <dependency>
-         <groupId>org.springframework.security</groupId>
-         <artifactId>spring-security-core</artifactId>
-         <version>5.7.0</version>
+           <groupId>org.springframework.security</groupId>
+           <artifactId>spring-security-config</artifactId>
+           <version>5.7.0</version>
       </dependency>
+
+      <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
 
 
         <dependency>
