--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -34,8 +34,8 @@
       </dependency>
 
       <dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-security</artifactId>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
 
 
@@ -71,6 +71,14 @@
         </dependency>
 
         <dependency>
+         <groupId>jakarta.servlet</groupId>
+         <artifactId>jakarta.servlet-api</artifactId>
+         <version>6.0.0</version>
+         <scope>provided</scope>
+     </dependency>
+
+
+        <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>8.0.0.Final</version>
@@ -103,20 +111,6 @@
           <version>3.12.0</version> 
       </dependency>
         
-        
-        <!-- Cloudinary Older -->
-        <dependency>
-          <groupId>com.cloudinary</groupId>
-          <artifactId>cloudinary-http44</artifactId>
-          <version>1.31.0</version>
-      </dependency> 
-      
-      <!-- Cloudinary New 
-      <dependency>
-         <groupId>com.cloudinary</groupId>
-         <artifactId>cloudinary</artifactId>
-         <version>1.31.0</version>
-       </dependency> --> 
 
     </dependencies>
 
