--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -101,6 +101,14 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
+        
+      <dependency>
+        <groupId>com.google.api-client</groupId>
+        <artifactId>google-api-client-jackson2</artifactId>
+        <version>1.32.1</version> 
+     </dependency>
+
+
     </dependencies>
 
     <build>
