--- a/server/jagarv/src/main/resources/application.properties
+++ b/server/jagarv/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${DB_URL}
+    spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update 
@@ -12,3 +12,4 @@ cloudinary.apiSecret=${cloudinaryApiSecret}
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+google.clientId=${googleClientId}
