--- a/server/jagarv/src/main/resources/application.properties
+++ b/server/jagarv/src/main/resources/application.properties
@@ -8,8 +8,13 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 cloudinary.cloudName=${cloudinaryCloudName}
 cloudinary.apiKey=${cloudinaryApiKey}
 cloudinary.apiSecret=${cloudinaryApiSecret}
-
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 google.clientId=${googleClientId}
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mail@gmail.com
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
