--- a/server/jagarv/src/main/resources/application.properties
+++ b/server/jagarv/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.servlet.multipart.max-request-size=10MB
 google.clientId=${googleClientId}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mail@gmail.com
-spring.mail.password=password
+spring.mail.username=${EMAIL_USER}
+spring.mail.password=${EMAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
