--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -52,6 +52,13 @@
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-mail</artifactId>
       </dependency>
+     
+    <!-- JWT --> 
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt</artifactId>
+        <version>0.9.1</version>
+     </dependency>
 
         <!-- PostgreSQL Driver -->
         <dependency>
