--- a/server/jagarv/src/main/resources/application.properties
+++ b/server/jagarv/src/main/resources/application.properties
@@ -19,3 +19,4 @@ spring.mail.username=${EMAIL_USER}
 spring.mail.password=${EMAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+jwtjwtSecret=${JWT_SECRET}
