--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -71,11 +71,10 @@
         </dependency>
 
         <dependency>
-            <groupId>jakarta.servlet</groupId>
-            <artifactId>jakarta.servlet-api</artifactId>
-            <version>6.0.0</version>
-            <scope>provided</scope>
-        </dependency>
+           <groupId>jakarta.el</groupId>
+           <artifactId>jakarta.el-api</artifactId>
+           <version>4.0.0</version>
+       </dependency>
 
         <dependency>
             <groupId>org.hibernate.validator</groupId>
