--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -119,6 +119,8 @@
             <version>3.0.0</version>
         </dependency>
     </dependencies>
+    
+    <!-- repos -->
 
     <repositories>
         <repository>
