--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -118,9 +118,20 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>3.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+        <!-- Uncomment below line if necessary -->
+        <!-- <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency> -->
     </dependencies>
-    
-    <!-- repos -->
 
     <repositories>
         <repository>
