--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -125,12 +125,12 @@
             <version>3.0.0</version>
         </dependency>
 
-        <!-- Uncomment below line if necessary -->
-        <!-- <dependency>
+        
+        <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
-        </dependency> -->
+        </dependency> 
     </dependencies>
 
     <repositories>
