trying to add alias in imports

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -28,5 +28,12 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictTemplates": true
+  },
+  "baseUrl": "./src",
+  "paths": {
+     "@app/*": ["app/*"],
+     "@components/*": ["app/components/*"],
+     "@services/*": ["app/services/*"],
+     "@models/*": ["app/models/*"],
   }
 }
