--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -3,6 +3,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./src",
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitAny": true,
@@ -18,6 +19,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "target": "es2022",
+    "paths": {
+       "@services/*": ["app/services/*"]
+    },
     "lib": ["es2022", "dom"],
     "sourceMap": true,
     "declaration": false,
@@ -28,10 +32,5 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictTemplates": true
-  },
-  "baseUrl": "./src",
-  "paths": {
-     "@services/*": ["app/services/*"],
-     "@models/*": ["app/models/*"],
   }
 }
