--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,7 +20,13 @@
     "moduleResolution": "node",
     "target": "es2022",
     "paths": {
-       "@services/*": ["app/services/*"]
+       "@services/*": ["app/services/*"],
+       "@models/*": ["app/models/*"],
+       "@store/*": ["app/store/*"],
+       "@guards/*": ["app/guards/*"],
+       "@env/*": ["app/environments/*"],
+       "@interceptors/*": ["app/interceptors/*"],
+       "@validators/*": ["app/validators/*"]
     },
     "lib": ["es2022", "dom"],
     "sourceMap": true,
