Implementing Payment systems

--- a/server/jagarv/src/main/resources/application.properties
+++ b/server/jagarv/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.mail.password=${EMAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 jwtSecret=${JWT_SECRET}
+stripe.publicKey = ${STRIPE_PUBLIC_KEY}
+stripe.secret = ${STRIPE_SECRET}
