--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -132,6 +132,14 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency> 
+        
+        <dependency>
+           <groupId>com.stripe</groupId>
+           <artifactId>stripe-java</artifactId>
+           <version>20.106.0</version>
+       </dependency>
+       
+       
     </dependencies>
 
     <repositories>
