--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -139,6 +139,12 @@
            <version>20.106.0</version>
        </dependency>
        
+       <dependency>
+         <groupId>com.paypal.sdk</groupId>
+         <artifactId>rest-api-sdk</artifactId>
+         <version>1.14.0</version>
+      </dependency>
+       
     </dependencies>
 
     <repositories>
