--- a/server/jagarv/pom.xml
+++ b/server/jagarv/pom.xml
@@ -144,6 +144,12 @@
          <artifactId>rest-api-sdk</artifactId>
          <version>1.14.0</version>
       </dependency>
+      
+      <dependency>
+    <groupId>jakarta.persistence</groupId>
+    <artifactId>jakarta.persistence-api</artifactId>
+    <version>3.1.0</version>
+</dependency>
        
     </dependencies>
 
