fixed some typos

--- a/server/jagarv/src/main/resources/application.properties
+++ b/server/jagarv/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 jwtSecret=${JWT_SECRET}
 stripe.publicKey = ${STRIPE_PUBLIC_KEY}
 stripe.secret = ${STRIPE_SECRET}
+stripe.webhook_secret=${STRIPE_WEBHOOK_SECRET}
 paypal.mode=sandbox
 paypal.client-id=${PAYPAL_CLIENT_ID}
 paypal.client-secret=${PAYPAL_CLIENT_SECRET}
