--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,8 @@
     "@ngrx/store": "^18.1.0",
     "@stripe/stripe-js": "^4.10.0",
     "decimal.js": "^10.4.3",
+    "echarts": "^5.5.1",
+    "ngx-echarts": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
