--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@ngrx/store": "^18.1.0",
     "@stripe/stripe-js": "^4.10.0",
+    "chart.js": "^4.4.7",
     "decimal.js": "^10.4.3",
     "echarts": "^5.5.1",
+    "ngx-chartjs": "^0.0.1",
     "ngx-echarts": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
